# Jesur

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  INSTALL.TR.md  INSTALL.md  Jesur.py  README.TR.md  README.md  docker-compose.yml  jesur.conf  jesur.conf.example  liste.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
jesur/: __init__.py  main.py
jesur/core/: analyzer.py  connection.py  constants.py  context.py  process_scanner.py  scanner.py
jesur/core/data/: patterns.json
jesur/data/templates/: report.html
jesur/reporting/: exporter.py  generator.py
jesur/utils/: cache.py  common.py  errors.py  geo.py  logger.py
tests/: test_analyzer_patterns.py  test_exporter.py  test_generator.py  test_main.py  test_scanner_keywords.py  test_text_extensions.py
